src/Tests/Error/GreaterThanError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class GreaterThanError extends AssertError
{
}
